...
            TabView(selection: $selection) {
                HomeView(model: model)
                    .font(.title)
                    .tabItem {
                        VStack {
                            Image(systemName: "house")
                            Text("Home")
                        }
                    }
                    .tag(0)
                AboutView()
                    .font(.title)
                    .tabItem {
                        VStack {
                            Image(systemName: "info.circle")
                            Text("About")
                        }
                    }
                    .tag(1)
            }
        }
        
...
