...
                    }
                }
#endif
                model.logOut()
                self.authenticateV3()
            })
                .accessibilityIdentifier("loginButton")
                .frame(minWidth: 0, maxWidth: .infinity, alignment: .bottom)
                .padding(.vertical, 15)
                .foregroundColor(Color.white)
                .background(Color("TeslaRed"))
                .cornerRadius(10.0)
                .disabled(model.externalTokenRequest != nil)
...
